--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-skeleton-navigation",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "A starter kit for building a standard navigation-style app with Aurelia.",
   "keywords": [
     "aurelia",
@@ -24,63 +24,60 @@
   },
   "devDependencies": {
     "aurelia-bundler": "^0.4.0",
-    "aurelia-tools": "^0.2.4",
-    "babel-core": "^6.11.4",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-syntax-flow": "^6.8.0",
+    "aurelia-protractor-plugin": "^1.0.0",
+    "aurelia-tools": "^1.0.0",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
+    "babel-plugin-istanbul": "^2.0.3",
+    "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.12.0",
-    "babel-plugin-transform-flow-strip-types": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "browser-sync": "^2.13.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "browser-sync": "^2.17.5",
     "conventional-changelog": "1.1.0",
-    "del": "^2.2.1",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-bump": "^2.2.0",
-    "gulp-changed": "^1.3.1",
+    "gulp-bump": "^2.5.0",
+    "gulp-changed": "^1.3.2",
     "gulp-eslint": "^3.0.1",
-    "gulp-htmlmin": "^2.0.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-protractor": "3.0.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "isparta": "^4.0.0",
-    "istanbul": "^1.0.0-alpha.2",
-    "jasmine-core": "^2.4.1",
-    "jspm": "^0.16.41",
-    "karma": "^1.1.2",
+    "gulp-sourcemaps": "^2.2.0",
+    "jasmine-core": "^2.5.2",
+    "jspm": "^0.16.47",
+    "karma": "^1.3.0",
     "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-jspm": "2.2.0",
     "object.assign": "^4.0.4",
-    "require-dir": "^0.3.0",
+    "protractor": "^4.0.10",
+    "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "vinyl-paths": "^2.1.0",
-    "yargs": "^4.8.1"
+    "yargs": "^6.3.0"
   },
   "jspm": {
     "dependencies": {
-      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-rc.1.0.0",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-rc.1.0.0",
-      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-rc.1.0.0",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.5",
-      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-rc.1.0.0",
-      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0",
-      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-rc.1.0.0",
-      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-rc.1.0.0",
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-rc.1.0.0",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-rc.1.0.0",
-      "aurelia-router": "npm:aurelia-router@^1.0.5",
-      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-rc.1.0.0",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-rc.1.0.0",
-      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-rc.1.0.0",
+      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.2",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^2.1.1",
+      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.1.2",
+      "aurelia-framework": "npm:aurelia-framework@^1.1.2",
+      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0",
+      "aurelia-http-client": "npm:aurelia-http-client@^1.1.1",
+      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.2",
+      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0",
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.2.1",
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.2.1",
+      "aurelia-router": "npm:aurelia-router@^1.3.0",
+      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.3.0",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.4.0",
+      "aurelia-templating-router": "npm:aurelia-templating-router@^1.1.0",
       "bluebird": "npm:bluebird@3.4.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "fetch": "github:github/fetch@^1.0.0",
@@ -90,5 +87,6 @@
       "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {}
-  }
+  },
+  "dependencies": {}
 }
